doc/windows/Delphi/64bit/single_card/gts.pas


function GT_SetEncPos(encoder : SmallInt;encPos:LongInt): SmallInt; stdcall; External GTDLL;
function GT_GetEncPos(encoder : SmallInt; out pValue:Double; count:SmallInt;out pClock:LongWord): SmallInt; stdcall; External GTDLL;
function GT_GetEncPosPre(encoder:SmallInt;out pValue:Double;count:SmallInt;out pClock:LongWord): SmallInt; stdcall; External GTDLL;
function GT_GetEncVel(encoder : SmallInt; out pValue:Double; count:SmallInt;out pClock:LongWord): SmallInt; stdcall; External GTDLL;

function GT_SetCaptureMode(encoder : SmallInt;mode:SmallInt): SmallInt; stdcall; External GTDLL;
function GT_GetCaptureMode(encoder : SmallInt; out pMode : SmallInt; count:SmallInt=1	): SmallInt; stdcall; External GTDLL;
function GT_StopCapture(encoder : SmallInt): SmallInt; stdcall; External GTDLL;
function GT_GetCaptureStatus(encoder : SmallInt; out pStatus : SmallInt; out pValue:LongInt;count:SmallInt;out pClock:LongWord): SmallInt; stdcall; External GTDLL;
function GT_SetCaptureSense(encoder : SmallInt;mode:SmallInt;sense:SmallInt): SmallInt; stdcall; External GTDLL;
function GT_ClearCaptureStatus(encoder : SmallInt): SmallInt; stdcall; External GTDLL;
function GT_SetCaptureRepeat(encoder:SmallInt;count:SmallInt): SmallInt; stdcall; External GTDLL;
function GT_GetCaptureRepeatStatus(encoder:SmallInt;out pCount:SmallInt): SmallInt; stdcall; External GTDLL;
function GT_GetCaptureRepeatPos(encoder:SmallInt;out pValue:LongInt;startNum:SmallInt;count:SmallInt): SmallInt; stdcall; External GTDLL;

function GT_SetCaptureEncoder(trigger:SmallInt;encoder:SmallInt): SmallInt; stdcall; External GTDLL;
function GT_GetCaptureWidth(trigger:SmallInt;out pWidth:SmallInt;count:SmallInt=1): SmallInt; stdcall; External GTDLL;
function GT_GetCaptureHomeGpi(trigger:SmallInt;out pHomeSts:SmallInt;out pHomePos:SmallInt;out pGpiSts:SmallInt;out pGpiPos:SmallInt;count:SmallInt=1): SmallInt; stdcall; External GTDLL;

function GT_Reset: SmallInt; stdcall; External GTDLL;
function GT_GetClock(Out pClock:LongWord;out pLoop:LongWord): SmallInt; stdcall; External GTDLL;
function GT_GetClockHighPrecision(Out pClock:LongWord): SmallInt; stdcall; External GTDLL;

function GT_GetSts(axis : SmallInt; out pSts:LongInt; count:SmallInt;out pClock:LongWord): SmallInt; stdcall; External GTDLL;
function GT_ClrSts(axis:SmallInt;count:SmallInt=1): SmallInt; stdcall; External GTDLL;
function GT_AxisOn(axis:SmallInt): SmallInt; stdcall; External GTDLL;
function GT_AxisOff(axis:SmallInt): SmallInt; stdcall; External GTDLL;
function GT_Stop(mask:LongInt;stopOption:LongInt): SmallInt; stdcall; External GTDLL;
function GT_SetPrfPos(profile : SmallInt;prfPos:LongInt): SmallInt; stdcall; External GTDLL;
function GT_SynchAxisPos(mask:LongInt): SmallInt; stdcall; External GTDLL;
function GT_ZeroPos(axis : SmallInt;count : SmallInt=1): SmallInt; stdcall; External GTDLL;

function GT_SetSoftLimit(axis : SmallInt;positive:LongInt;negative:LongInt): SmallInt; stdcall; External GTDLL;
function GT_GetSoftLimit(axis : SmallInt;out pPositive:LongInt;out pNegative:LongInt): SmallInt; stdcall; External GTDLL;
function GT_SetAxisBand(axis : SmallInt;band:LongInt;time:LongInt): SmallInt; stdcall; External GTDLL;
function GT_GetAxisBand(axis : SmallInt; out pBand:LongInt;out pTime:LongInt): SmallInt; stdcall; External GTDLL;
function GT_SetBacklash(axis : SmallInt;compValue:LongInt;compChangeValue:Double;compDir:LongInt): SmallInt; stdcall; External GTDLL;
function GT_GetBacklash(axis : SmallInt; out pCompValue:LongInt;out pCompChangeValue:Double;out pCompDir:LongInt): SmallInt; stdcall; External GTDLL;
function GT_SetLeadScrewComp(axis:SmallInt;n:SmallInt;startPos:LongInt;lenPos:LongInt;out pCompPos:LongInt;out pCompNeg:LongInt): SmallInt; stdcall; External GTDLL;
function GT_EnableLeadScrewComp(axis:SmallInt;mode:SmallInt): SmallInt; stdcall; External GTDLL;
function GT_GetCompensate(axis:SmallInt;out pPitchError:Double;out pCrossError:Double;out pBacklashError:Double;out pEncPos:Double;out pPrfPos:Double): SmallInt; stdcall; External GTDLL;

function GT_EnableGantry(gantryMaster:SmallInt;gantrySlave:SmallInt;masterKp:Double;slaveKp:Double): SmallInt; stdcall; External GTDLL;
function GT_DisableGantry(): SmallInt; stdcall; External GTDLL;
function GT_SetGantryErrLmt(gantryErrLmt:LongInt): SmallInt; stdcall; External GTDLL;
function GT_GetGantryErrLmt(out pGantryErrLmt:LongInt): SmallInt; stdcall; External GTDLL;
function GT_ZeroGantryPos(gantryMaster:SmallInt;gantrySlave:SmallInt): SmallInt; stdcall; External GTDLL;

function GT_GetPrfPos(profile : SmallInt; out pValue:Double; count:SmallInt; out pClock:LongWord): SmallInt; stdcall; External GTDLL;
function GT_GetPrfVel(profile : SmallInt; out pValue:Double; count:SmallInt; out pClock:LongWord): SmallInt; stdcall; External GTDLL;
function GT_GetPrfAcc(profile : SmallInt; out pValue:Double; count:SmallInt; out pClock:LongWord): SmallInt; stdcall; External GTDLL;
function GT_GetPrfMode(profile : SmallInt; out pValue:LongInt;count:SmallInt; out pClock:LongWord): SmallInt; stdcall; External GTDLL;

function GT_GetAxisPrfPos(axis : SmallInt; out pValue:Double; count:SmallInt;out pClock:LongWord): SmallInt; stdcall; External GTDLL;
function GT_GetAxisPrfVel(axis : SmallInt; out pValue:Double; count:SmallInt;out pClock:LongWord): SmallInt; stdcall; External GTDLL;
function GT_GetAxisPrfAcc(axis : SmallInt; out pValue:Double; count:SmallInt;out pClock:LongWord): SmallInt; stdcall; External GTDLL;
function GT_GetAxisEncPos(axis : SmallInt; out pValue:Double; count:SmallInt;out pClock:LongWord): SmallInt; stdcall; External GTDLL;
function GT_GetAxisEncVel(axis : SmallInt; out pValue:Double; count:SmallInt;out pClock:LongWord): SmallInt; stdcall; External GTDLL;
function GT_GetAxisEncAcc(axis : SmallInt; out pValue:Double; count:SmallInt;out pClock:LongWord): SmallInt; stdcall; External GTDLL;
function GT_GetAxisError(axis : SmallInt; out pValue:Double; count:SmallInt;out pClock:LongWord): SmallInt; stdcall; External GTDLL;

function GT_SetLongVar(index:SmallInt;value:LongInt): SmallInt; stdcall; External GTDLL;
function GT_GetLongVar(index:SmallInt;out pValue:LongInt): SmallInt; stdcall; External GTDLL;
function GT_SetDoubleVar(index:SmallInt;pValue:Double): SmallInt; stdcall; External GTDLL;
function GT_GetDoubleVar(index:SmallInt;out pValue:Double): SmallInt; stdcall; External GTDLL;

function GT_SetControlFilter(control : SmallInt;index:SmallInt): SmallInt; stdcall; External GTDLL;
function GT_GetControlFilter(control : SmallInt;out pIndex:SmallInt): SmallInt; stdcall; External GTDLL;

function GT_SetPid(control : SmallInt;index : SmallInt; var pPid:TPid): SmallInt; stdcall; External GTDLL;
function GT_GetPid(control : SmallInt;index : SmallInt; out pPid:TPid): SmallInt; stdcall; External GTDLL;

function GT_SetKvffFilter(control:SmallInt;index:SmallInt;kvffFilterExp:SmallInt;accMax:Double): SmallInt; stdcall; External GTDLL;
function GT_GetKvffFilter(control:SmallInt;index:SmallInt;out pKvffFilterExp:SmallInt;out pAccMax:Double): SmallInt; stdcall; External GTDLL;

function GT_Update(mask:LongInt): SmallInt; stdcall; External GTDLL;
function GT_SetPos(profile : SmallInt;pos:LongInt): SmallInt; stdcall; External GTDLL;
function GT_GetPos(profile : SmallInt; out pPos:LongInt	): SmallInt; stdcall; External GTDLL;
function GT_SetVel(profile : SmallInt;vel:Double): SmallInt; stdcall; External GTDLL;
function GT_GetVel(profile : SmallInt; out pVel:Double): SmallInt; stdcall; External GTDLL;

function GT_PrfTrap(profile:SmallInt): SmallInt; stdcall; External GTDLL;
function GT_SetTrapPrm(profile : SmallInt; var pPrm:TTrapPrm): SmallInt; stdcall; External GTDLL;
function GT_GetTrapPrm(profile : SmallInt; out pPrm:TTrapPrm): SmallInt; stdcall; External GTDLL;

function GT_PrfJog(profile:SmallInt): SmallInt; stdcall; External GTDLL;
function GT_SetJogPrm(profile : SmallInt; var pPrm:TJogPrm): SmallInt; stdcall; External GTDLL;
function GT_GetJogPrm(profile : SmallInt; out pPrm:TJogPrm): SmallInt; stdcall; External GTDLL;

function GT_PrfPt(profile : SmallInt; mode:SmallInt = PT_MODE_STATIC): SmallInt; stdcall; External GTDLL;
function GT_SetPtLoop(profile : SmallInt;ptLoop:LongInt	): SmallInt; stdcall; External GTDLL;
function GT_GetPtLoop(profile : SmallInt; out pLoop:LongInt	): SmallInt; stdcall; External GTDLL;
function GT_PtSpace(profile : SmallInt; out pSpace:SmallInt; fifo:SmallInt = 0): SmallInt; stdcall; External GTDLL;
function GT_PtData(profile : SmallInt;pos:Double;time:LongInt; mytype:SmallInt = PT_SEGMENT_NORMAL;fifo:SmallInt = 0): SmallInt; stdcall; External GTDLL;
function GT_PtDataWN(profile:SmallInt;pos:Double;time:LongInt;ptDataType:SmallInt=PT_SEGMENT_NORMAL;segNum:LongInt=0;fifo:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_PtClear(profile : SmallInt; fifo:SmallInt = 0): SmallInt; stdcall; External GTDLL;
function GT_PtStart(mask:LongInt;fifoOption:LongInt = 0): SmallInt; stdcall; External GTDLL;
function GT_SetPtMemory(profile : SmallInt; memory:SmallInt): SmallInt; stdcall; External GTDLL;
function GT_GetPtMemory(profile : SmallInt; out pMemory:SmallInt): SmallInt; stdcall; External GTDLL;
function GT_PtGetSegNum(profile:SmallInt;out pSegNum:LongInt): SmallInt; stdcall; External GTDLL;
function GT_SetPtPrecisionMode(profile:SmallInt;precisionMode:SmallInt): SmallInt; stdcall; External GTDLL;
function GT_GetPtPrecisionMode(profile:SmallInt;out pPrecisionMode:SmallInt): SmallInt; stdcall; External GTDLL;
function GT_SetPtVel(profile:SmallInt;velLast:Double;fifo:SmallInt): SmallInt; stdcall; External GTDLL;
function GT_SetPtLink(profile:SmallInt;fifo:SmallInt;list:SmallInt): SmallInt; stdcall; External GTDLL;
function GT_GetPtLink(profile:SmallInt;fifo:SmallInt;out pList:SmallInt): SmallInt; stdcall; External GTDLL;
function GT_PtDoBit(profile:SmallInt;doType:SmallInt;index:SmallInt;value:SmallInt;fifo:SmallInt): SmallInt; stdcall; External GTDLL;
function GT_PtAo(profile:SmallInt;aoType:SmallInt;index:SmallInt;value:Double;fifo:SmallInt): SmallInt; stdcall; External GTDLL;

function GT_PrfGear(profile : SmallInt; dir:SmallInt = 0): SmallInt; stdcall; External GTDLL;
function GT_SetGearMaster(profile : SmallInt;masterIndex : SmallInt;masterType : SmallInt=GEAR_MASTER_PROFILE; masterItem:SmallInt = 0): SmallInt; stdcall; External GTDLL;
function GT_GetGearMaster(profile : SmallInt;out pMasterIndex : SmallInt; out pMasterType : SmallInt; out pMasterItem:SmallInt): SmallInt; stdcall; External GTDLL;
function GT_SetGearRatio(profile : SmallInt;masterEven:LongInt;slaveEven:LongInt; masterSlope:LongInt = 0): SmallInt; stdcall; External GTDLL;
function GT_GetGearRatio(profile : SmallInt; out pMasterEven:LongInt;out pSlaveEven:LongInt; out pMasterSlope:LongInt): SmallInt; stdcall; External GTDLL;
function GT_GearStart(mask:LongInt): SmallInt; stdcall; External GTDLL;
function GT_SetGearEvent(profile:SmallInt;event:SmallInt;startPara0:LongInt;startPara1:LongInt): SmallInt; stdcall; External GTDLL;
function GT_GetGearEvent(profile:SmallInt;out pEvent:SmallInt;out pStartPara0:LongInt;out pStartPara1:LongInt): SmallInt; stdcall; External GTDLL;
